lots of changes

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="container-fluid services">
                 <div class="row text-center">
                     <h3>
-                        Whether you're a budding startup fueled by innovation or an established corporation navigating a dynamic market, I offer the skills and expertise to support your success.</h3>
+                        Whether you're a budding startup fueled by innovation or an established corporation navigating a dynamic market, I have the skills and expertise to support your success.</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-sm-6">
@@ -84,14 +84,14 @@
                             <img data-src="/images/icons/leader.png">
                             <h5>Team Leadership</h5>
                             <p>
-                                I excel in cross-functional team leadership, fostering collaboration and effective communication to deliver exceptional digital experiences, while nurturing mastery of user-centered research, innovation, and design skills.</p>
+                                As an an objective-oriented leader, I work to foster an environment of collaboration and communication, while delivering exceptional experiences and nurturing mastery of professional skills.</p>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="service">
                             <img data-src="/images/icons/design.png">
                             <h5>Experience Design</h5>
-                            <p>I am deeply passionate about UX design and dedicated to creating intuitive and visually appealing experiences that effectively address the core needs of users while delivering on the strategic objectives of your business.</p>
+                            <p>I am deeply passionate about UX design and dedicated to creating intuitive and visually appealing experiences that effectively address the core needs of users, while delivering on the strategic objectives of your business.</p>
                         </div>
                     </div>
                     <div class="col-sm-6">
@@ -99,7 +99,7 @@
                             <img data-src="/images/icons/strategy.png">
                             <h5>Product Management</h5>
                             <p>
-                                Companies often struggle to bring their great ideas to life. My expertise lies in converting these ideas into practical product strategies and delivery plans that generate tangible value for both users and the business.
+                                Companies often struggle to bring their great ideas to life. My expertise lies in translating these ideas into practical product strategies and delivery plans that generate tangible value for both users and the business.
                             </p>
                         </div>
                     </div>
