--- a/work/inssider.html
+++ b/work/inssider.html
@@ -109,7 +109,7 @@
                     <h5>Stakeholder Map</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>Interviews and ride-alongs provided us with a deep understanding of the challenges that ISPs face in providing stable Wi-Fi service, and how these issues emerge for all impacted stakeholders.</p>
+                    <p>Through stakeholder interviews and dozens of ride-alongs with field technicians, the team developed a deep understanding of the challenges that ISPs face in providing stable Wi-Fi service for their customers. Findings were translated into stakeholder maps that helped the team to identify the most critical pain-points and focus our ideation efforts.</p>
                 </div>
                 <div class="col-sm-12 col-md-10 offset-md-1">
                     <img class="img-responsive" data-src="/images/projects/inssider/inssider_stakeholder.svg">
@@ -119,7 +119,7 @@
                     <h5>Experience Map</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>I led a series of working sessions to map the common service lifecycle for ISPs providing network service to residential customers, based on our experience in the field. Common jobs, pains, and solutions were mapped at each stage, along with potential interventions.</p>
+                    <p>I led a series of working sessions to map the common stages of service delivery for ISPs, based on our experience in the field. Common jobs, pains, and existing solutions were mapped at each stage. This exercise provided the team and executive stakeholders with a solid understanding of the problem space, and allowed the team to easily identify opportunities for innovation.</p>
                 </div>
                 <div class="col-sm-12">
                     <img class="img-responsive" data-src="/images/projects/inssider/inssider_whiteboard1.jpg">
@@ -149,7 +149,7 @@
                     <h5>Rapid Iteration</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>Low-fidelity sketches allowed the team to quickly explore various solutions with low commitment of time and resources, helping to identify gaps in the experience and opportunities for improvement.</p>
+                    <p>Low-fidelity sketches allowed the team to quickly explore various solutions with low commitment of time and resources, helping to refine ideas and identify gaps in the experience.</p>
                 </div>
                 <div class="col-sm-12">
                     <img class="img-responsive" data-src="/images/projects/inssider/inssider_sketches.jpg">
@@ -159,21 +159,42 @@
                     <h5>Mockups & Prototypes</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>Hi-fidelity mockups and prototypes were used to gather feedback from internal decision-makers and potential customers. Once the desirability and viability of the concept was validated, these same artifacts were used to communicate design intent to engineers.</p>
+                    <p>Hi-fidelity mockups and prototypes were used to gather feedback from internal decision-makers and potential customers. Once the desirability, feasibility, and viability of the concept was validated, these same artifacts were used to communicate design intent to engineers.</p>
                 </div>
                 <div class="col-sm-12">
                     <img class="img-responsive" data-src="/images/projects/inssider/inssider_screens.jpg">
                 </div>
 
                 <div class="col-sm-12 col-lg-3">
+                    <h5>Cross-platform Design</h5>
+                </div>
+                <div class="col-lg-9">
+                    <p>ISPs provide their techs with a wide range of mobile devices, which drove development of  versions for both Android and iOS. I negotiated a partnership with a hardware peripheral vendor to overcome limitations on wireless data collection through Apple devices.</p>
+                </div>
+                <div class="col-sm-12">
+                    <img class="img-responsive" data-src="/images/projects/inssider/inssider_mobile.png">
+                </div>
+
+                <div class="col-sm-12 col-lg-3">
                     <h5>Data Visualization</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>Straight-forward visualizations and an intuitive color scheme were used to take any guesswork out of the process of troubleshooting residential Wi-Fi networks.</p>
+                    <p>Clear data visualizations and an intuitive color scheme were utilized to take any guesswork out of the process of troubleshooting residential Wi-Fi networks.</p>
                 </div>
                 <div class="col-sm-12">
-                    <img class="img-responsive" data-src="/images/projects/inssider/inssider_visuals.jpg">
+                    <img class="img-responsive" data-src="/images/projects/inssider/inssider_visuals.png">
                 </div>
+
+                <div class="col-sm-12 col-lg-3">
+                    <h5>Flexible Workflow</h5>
+                </div>
+                <div class="col-lg-9">
+                    <p>inSSIDer was designed to enable experienced techs to effectively troubleshoot complex issues, while providing automated analysis and recommendations for novices.</p>
+                </div>
+                <div class="col-sm-12">
+                    <img class="img-responsive" data-src="/images/projects/inssider/inssider_assess.png">
+                </div>
+
                 <div class="row frame quote justify-content-center">
                     <div class="col-sm-12">
                         <p>“Our techs religously use inSSIDer to ensure that customers are left with the best experience possible.”<br>
