--- a/work/bodybuilding.html
+++ b/work/bodybuilding.html
@@ -131,7 +131,7 @@
                 <h5>Personalization</h5>
             </div>
             <div class="col-lg-9">
-                <p>Quick links make it easy for users to make a purchase, find and track fitness plans, or interact with friends in the Bodybuilding.com community.</p>
+                <p>Quick links were introduced to make it easier for users to accomplish all of their common tasks, from purchasing products to finding and tracking fitness plans, or interacting with friends in the Bodybuilding.com community.</p>
             </div>
             <div class="col-sm-12">
                 <img class="img-responsive" src="/images/projects/bbcom/bbcom_dropdown.jpg">
@@ -141,7 +141,7 @@
                 <h5>Prototyping</h5>
             </div>
             <div class="col-lg-9">
-                <p>Clickable prototypes made it quick and easy to make iterations based on stakeholder feedback. Through the development process, prototypes were repurposed to communicate design intent to content creators and engineers.</p>
+                <p>Clickable prototypes made it quick and easy to iterate based on stakeholder feedback. Throughout the development process, prototypes were repurposed to communicate design intent to content creators and engineers.</p>
             </div>
             <div class="col-sm-12">
                 <img class="img-responsive" src="/images/projects/bbcom/bbcom_prototype.jpg">
@@ -151,7 +151,7 @@
                 <h5>Flexible Layout</h5>
             </div>
             <div class="col-lg-9">
-                <p>The new wrapper was built to support dozens of unique layouts across hundreds of pages, while remaining flexible enough to handle future iterations.</p>
+                <p>The new wrapper was built to support dozens of unique layouts across thousands of pages, while remaining flexible enough to handle future iterations.</p>
             </div>
             <div class="col-sm-12">
                 <img class="img-responsive" src="/images/projects/bbcom/bbcom_screens.jpg">
