--- a/work/bodybuilding.html
+++ b/work/bodybuilding.html
@@ -141,7 +141,7 @@
                 <h5>Prototyping</h5>
             </div>
             <div class="col-lg-9">
-                <p>Clickable prototypes made it quick and easy to iterate based on stakeholder feedback. Throughout the development process, prototypes were repurposed to communicate design intent to content creators and engineers.</p>
+                <p>Clickable prototypes enabled rapid iteration based on stakeholder feedback. Throughout the development process, prototypes were repurposed to communicate design intent to content creators and engineers.</p>
             </div>
             <div class="col-sm-12">
                 <img class="img-responsive" src="/images/projects/bbcom/bbcom_prototype.jpg">
