--- a/work/bodybuilding.html
+++ b/work/bodybuilding.html
@@ -128,6 +128,26 @@
             </div>
 
             <div class="col-sm-12 col-lg-3">
+                <h5>Personas</h5>
+            </div>
+            <div class="col-lg-9">
+                <p>User personas were developed based on interviews with customers and analysis of interactions in the online Bodybuilding.com community. Personas were used as a reference to focus the team's efforts, guide redesign of the site taxonomy and wrapper, and to inform ongoing improvements and innovations.</p>
+            </div>
+            <div class="col-sm-12">
+                <img class="img-responsive" src="/images/projects/bbcom/bbcom_personas.jpeg">
+            </div>
+
+            <div class="col-sm-12 col-lg-3">
+                <h5>Prototypes</h5>
+            </div>
+            <div class="col-lg-9">
+                <p>Clickable prototypes enabled rapid iteration based on stakeholder feedback. Throughout the development process, prototypes were repurposed to communicate design intent to content creators and engineers.</p>
+            </div>
+            <div class="col-sm-12">
+                <img class="img-responsive" src="/images/projects/bbcom/bbcom_prototype.jpg">
+            </div>
+
+            <div class="col-sm-12 col-lg-3">
                 <h5>Personalization</h5>
             </div>
             <div class="col-lg-9">
@@ -138,17 +158,7 @@
             </div>
 
             <div class="col-sm-12 col-lg-3">
-                <h5>Prototyping</h5>
-            </div>
-            <div class="col-lg-9">
-                <p>Clickable prototypes enabled rapid iteration based on stakeholder feedback. Throughout the development process, prototypes were repurposed to communicate design intent to content creators and engineers.</p>
-            </div>
-            <div class="col-sm-12">
-                <img class="img-responsive" src="/images/projects/bbcom/bbcom_prototype.jpg">
-            </div>
-
-            <div class="col-sm-12 col-lg-3">
-                <h5>Flexible Layout</h5>
+                <h5>Flexible UI</h5>
             </div>
             <div class="col-lg-9">
                 <p>The new wrapper was built to support dozens of unique layouts across thousands of pages, while remaining flexible enough to handle future iterations.</p>
