--- a/work/gigmob.html
+++ b/work/gigmob.html
@@ -107,7 +107,7 @@
                     <h5>Social Engagement</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>Concerts are more fun with friends. GigMob makes it easy for users to see which events are most popular within their social circle, and among people with whom they share common interests.</p>
+                    <p>Concerts are more fun with friends. GigMob was designed to make it easier for users to find events that are most popular within their social circles, and among people with whom they share common interests.</p>
                 </div>
                 <div class="col-sm-12">
                     <img class="img-responsive" src="/images/projects/gigmob/gigmob_crowd.jpg">
@@ -117,7 +117,7 @@
                     <h5>User flows</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>User flows helped the team to explore various common scenarios and work out kinks in the experience. This process resulted in a streamlined solution that makes it easy for users to accomplish their goals.</p>
+                    <p>User flows enabled exploration of common scenarios and were used to work out kinks in the experience. This process resulted in a streamlined solution that makes it easy for concert-goers to find, purchase, and attend events.</p>
                 </div>
                 <div class="col-sm-12">
                     <img class="img-responsive" src="/images/projects/gigmob/gigmob_userflow.jpg">
@@ -137,11 +137,21 @@
                     <h5>Intuitive Interface</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>GigMob is a one-stop-shop for concertgoers. The simple interface allows users to easily browse and share events, purchase tickets, and redeem those tickets from a single app.</p>
+                    <p>GigMob was envisioned as a one-stop-shop for concertgoers. The simple interface allows users to easily browse and share events, purchase tickets, and redeem tickets from a single app.</p>
                 </div>
                 <div class="col-sm-12">
                     <img class="img-responsive" src="/images/projects/gigmob/gigmob_screens.jpg">
                 </div>
+
+                <div class="col-sm-12 col-lg-3">
+                <h5>Contextual Recommendations</h5>
+            </div>
+            <div class="col-lg-9">
+                <p>GibMob makes it easy to locate events on the fly, according to users' musical tastes, popularity within their social circles, or by what is most convenient at the time.</p>
+            </div>
+            <div class="col-sm-12">
+                <img class="img-responsive" src="/images/projects/gigmob/gigmob_screens2.jpg">
+            </div>
 
                 <!-- Insert Quote Below
                 <div class="row frame quote justify-content-center">
