--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <img data-src="/images/icons/leader.png">
                             <h5>Team Leadership</h5>
                             <p>
-                                As an an objective-oriented leader, I work to foster an environment of collaboration and communication, while delivering exceptional experiences and nurturing mastery of professional skills.</p>
+                                As an an objective-oriented UX and Product leader, I work to foster an environment of collaboration and communication while delivering exceptional experiences and nurturing mastery of professional skills.</p>
                         </div>
                     </div>
                     <div class="col-sm-6">
@@ -114,7 +114,7 @@
                         <div class="service">
                             <img data-src="/images/icons/architecture.png">
                             <h5>Info Architecture</h5>
-                            <p>I am highly skilled at evaluating and optimizing complex information architectures, delivering seamless experiences that drive engagement and make it easier for users to accomplish their goals.</p>
+                            <p>I am highly skilled at evaluating and optimizing complex information architectures, delivering seamless experiences that highlight your value, drive engagement, and make it easier for users to accomplish their goals.</p>
                         </div>
                     </div>
                     <div class="col-sm-6">
