--- a/work/bodybuilding.html
+++ b/work/bodybuilding.html
@@ -131,7 +131,7 @@
                 <h5>Personas</h5>
             </div>
             <div class="col-lg-9">
-                <p>User personas were developed based on interviews with customers and analysis of interactions in the online Bodybuilding.com community. Personas were used as a reference to focus the team's efforts, guide redesign of the site taxonomy and wrapper, and to inform ongoing improvements and innovations.</p>
+                <p>I developed user personas based on interviews with customers and analysis of interactions in the online Bodybuilding.com community. Personas were used as a reference to focus the team's efforts, guide redesign of the site taxonomy and wrapper, and to inform ongoing improvements and innovations.</p>
             </div>
             <div class="col-sm-12">
                 <img class="img-responsive" src="/images/projects/bbcom/bbcom_personas.jpeg">
@@ -151,7 +151,7 @@
                 <h5>Personalization</h5>
             </div>
             <div class="col-lg-9">
-                <p>Quick links were introduced to make it easier for users to accomplish all of their common tasks, from purchasing products to finding and tracking fitness plans, or interacting with friends in the Bodybuilding.com community.</p>
+                <p>I introduced "quick links" to make it easier for users to accomplish all of their common tasks, from purchasing products to finding and tracking fitness plans, or interacting with friends in the Bodybuilding.com community.</p>
             </div>
             <div class="col-sm-12">
                 <img class="img-responsive" src="/images/projects/bbcom/bbcom_dropdown.jpg">
@@ -161,7 +161,7 @@
                 <h5>Flexible UI</h5>
             </div>
             <div class="col-lg-9">
-                <p>The new wrapper was built to support dozens of unique layouts across thousands of pages, while remaining flexible enough to handle future iterations.</p>
+                <p>I designed the new site wrapper to support dozens of unique layouts across thousands of pages, while remaining flexible enough to handle future iterations.</p>
             </div>
             <div class="col-sm-12">
                 <img class="img-responsive" src="/images/projects/bbcom/bbcom_screens.jpg">
