--- a/work/bodybuilding.html
+++ b/work/bodybuilding.html
@@ -121,7 +121,7 @@
                 <h5>Info Architecture</h5>
             </div>
             <div class="col-lg-9">
-                <p>A new site taxonomy was designed to reduce information overload while exposing more of the rich information available on Bodybuilding.com.</p>
+                <p>I rearchitected the site taxonomy to reduce information overload while exposing more of the rich information available on Bodybuilding.com.</p>
             </div>
             <div class="col-sm-12">
                 <img class="img-responsive" src="/images/projects/bbcom/bbcom_comparison.jpg">
@@ -151,7 +151,7 @@
                 <h5>Personalization</h5>
             </div>
             <div class="col-lg-9">
-                <p>I introduced "quick links" to make it easier for users to accomplish all of their common tasks, from purchasing products to finding and tracking fitness plans, or interacting with friends in the Bodybuilding.com community.</p>
+                <p>Quick-links were introduced to make it easier for users to accomplish all of their common tasks, from purchasing products to finding and tracking fitness plans, or interacting with friends in the Bodybuilding.com community.</p>
             </div>
             <div class="col-sm-12">
                 <img class="img-responsive" src="/images/projects/bbcom/bbcom_dropdown.jpg">
